# LuaFormatter

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  .pre-commit-hooks.yaml  .travis.yml  CMakeLists.txt  Dockerfile  FormatVisitor.cpp  FormatVisitor.h  Lua.g4  README.md  TODO  antlr-gen.sh  appveyor.yml  codecov.yml  compile_win32  config.h.in  lua-format-test  lua-format.cpp  luaformatter-scm-1.rockspec  main.cpp  uaformatter-scm-1.rockspec
.antlr/: Lua.interp  LuaLexer.interp  LuaLexer.java  LuaParser.java
.github/workflows/: build.yml  coverage.yml  main.yml  release.yml
antlr4-runtime/support/: Any.h
docs/: HACKING.md  Style-Config.md  lua-format.conf
libs/: antlr4-runtime.lib  libantlr4-runtime.dylib  libantlr4-runtime.so.4.7.1
src/: Config.cpp  Config.h  FlagParser.h  FormatVisitor.cpp  FormatVisitor.h  SourceWriter.h  log.h  lua-format.cpp  lua-format.h  main.cpp
src/visitor/: FormatVisitor.cpp  FormatVisitor.h  args.cpp  arguments.cpp  block.cpp  chunk.cpp  exp.cpp  function.cpp  function_call.cpp  name_and_args.cpp  name_list.cpp  stat.cpp  table.cpp  var.cpp  var_decl.cpp
test/: .test_format_file.cpp.swo  CMakeLists.txt  DartConfiguration.tcl  lua-format-test  test.cpp  test_args.cpp  test_config.cpp  test_flag_parser.cpp  test_format.cpp  test_format_file.cpp  test_line_separator.cpp  test_parser.cpp  test_validation.cpp
test/config/: column_limit.config  column_table_limit.config  correct.config  line_separator.config  tab.config
test/cpp17/: fs.cpp
test/lua/comment/: _in_args.lua  _space.lua  _table.lua  _varlist.lua  in_args.lua  varlist.lua
test/lua/disable_format/: _with_indent.lua  with_indent.lua
test/lua/expression/: _function_1.lua  function_1.lua
test/lua/issues/: PR-100.lua  PR-108.config  PR-108.lua  PR-181.lua  _PR-100.lua  _issue-144.lua  _issue-162.lua  _issue-18.lua  _issue-186.lua  _issue-19.lua  _issue-250.lua  _issue-80.lua  _issue-98.lua  _issue-98_1.lua  issue-104.config  issue-144.config  issue-144.lua  issue-156.lua  issue-168.lua  issue-18.lua  issue-250.config  issue-250.lua  issue-36.config  issue-62_1.config  issue-80.lua
test/lua/keep_simple_block_one_line/: _keep_simple_function_one_line_false.lua  keep_simple_function_one_line_false.config
test/lua/linebreak/: _block.lua  _chained_call_args.lua  _disable_align_in_function.lua  _functiondef.lua  _indent_in_explist.lua  _long_var.lua  _table.lua  args_length.lua  disable_align_in_function.lua  indent_in_explist.lua  long_var.lua  nested_method_call.lua
test/lua/literals/: _doublequote.lua  _singlequote.lua  doublequote.config  doublequote.lua  singlequote.lua
test/lua/statement/: _function.lua  _inner_spaces.lua  _operator.lua  _shebang.lua  _statements.lua  _table.lua  function.lua  operator.lua  shebang.lua  statements.lua
test/lua/syntax/: _lua54.lua
test/testconfig/: 1.lua-format  2.lua-format
test/testdata/: chopdown.lua  chopdown_out.lua  comments.lua  comments_out.lua  operator.lua  operator_out.lua  other.lua  other_out.lua  semi.lua  semi_out.lua  statements.lua  statements_out.lua  t1.lua  t1_out.lua  table.lua  table_out.lua
test/testdata/Config/: column_table_limit.config  indent_width.config  no_error_quote.config  no_error_tab.config  single_to_double.config  spaces_before_call.config
test/testdata/chop_down/: _block.lua  _function.lua  _parameter.lua  _table.lua  block.lua  function.lua  parameter.lua  table.lua
test/testdata/comment/: _attrib.lua  _function.lua  _varlist.lua  attrib.lua  function.lua  space.lua  table.lua
test/testdata/disable_format/: _simple.lua  simple.lua
test/testdata/expression/: _function_2.lua
test/testdata/issues/: PR-100.config  PR-101.config  PR-101.lua  PR-181.config  _PR-101.lua  _PR-108.lua  _PR-181.lua  _issue-104.lua  _issue-156.lua  _issue-168.lua  _issue-36.lua  _issue-62_1.lua  _issue-62_2.lua  _issue-62_3.lua  _issue-70.lua  issue-1.lua  issue-104.lua  issue-156.config  issue-162.config  issue-168.config  issue-186.lua  issue-19.lua  issue-36.config  issue-36.lua  issue-55.lua  issue-62_2.config  issue-62_3.config  issue-62_3.lua  issue-70.lua  issue-98.config  issue-98.lua  issue-98_1.config
test/testdata/keep_simple_block_one_line/: _default.lua  _keep_simple_control_block_one_line_false.lua  keep_simple_control_block_one_line_false.config  keep_simple_function_one_line_false.lua
test/testdata/linebreak/: _args_length.lua  _block.lua  _functioncall.lua  _functiondef.lua  _indent_in_explist.lua  _nested_method_call.lua  _operators.lua  _table.lua  _var_method_priority.lua  block.lua  chained_call_args.lua  functioncall.lua  functiondef.lua  long_var.lua  operators.lua  table.lua  var_method_priority.lua
test/testdata/literals/: _doublequote.lua  _singlequote.lua  doublequote.lua  singlequote.config  singlequote.lua
test/testdata/statement/: _function_call.lua  _semi.lua  _shebang.lua  _statements.lua  _table.lua  function_call.lua  inner_spaces.config  inner_spaces.lua  semi.lua
test/testdata/syntax/: lua54.lua
